// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package store;

import "google/api/annotations.proto";

import "validate/validate.proto";

import "protoc-gen-openapiv2/options/annotations.proto";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ZQCard/kratos-base-layout/api/v1/store";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "示例项目",
        version: "2.0.1",
        contact: {
            name: "qi.zhou",
            url: "",
            email: ""
        }
    },
    base_path: "/v2",
    host: "api-test.sweet7.com/kratos-base-layout",
    schemes: [HTTPS]
};
service ExampleService {
    rpc GetExampleList(GetExampleListReq) returns(GetExampleListPageRes){
        option (google.api.http) = {
            get:"/example"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "列表"
            description: "示例列表"
            tags: "example"
            schemes: [HTTPS],
        };
      };

      rpc CreateExample(CreateExampleReq) returns(Example){
        option (google.api.http) = {
            post:"/example"
            body:"*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "创建示例"
            description: "创建示例"
            tags: "example"
            schemes: [HTTPS],
        };
      };

      rpc UpdateExample(UpdateExampleReq) returns(CheckResponse){
        option (google.api.http) = {
            put:"/example"
            body:"*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "更新示例"
            description: "更新示例"
            tags: "example"
            schemes: [HTTPS],
        };
      };

      rpc DeleteExample(DeleteExampleReq) returns(CheckResponse){
        option (google.api.http) = {
            delete:"/example"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "删除示例"
            description: "删除示例"
            tags: "example"
            schemes: [HTTPS],
        };
      };
}

message UpdateExampleReq {
    int64 id = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "id",
        },
        (validate.rules).int64.gt = 0
    ];
    string name = 2 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "名称",
        },
        (validate.rules).string = {min_len: 1, max_len: 60}
    ];
    bool status = 3 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "状态 0关闭 1开启",
        }
    ];
}

message CreateExampleReq {
    string name = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "名称",
        },
        (validate.rules).string = {min_len: 1, max_len: 60}
    ];
    bool status =2 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "状态 0关闭 1开启",
        }
    ];
}

message Example {
    int64 id = 1;
    string name = 2;
    bool status = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message  GetExampleListPageRes {
    int64 total = 1;
    repeated Example list = 2;
}


message  GetExampleListReq {
    int64 page = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "页码",
        },
        (validate.rules).int64.gt = 0
    ];

    int64 pageSize = 2 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "页记录数",
        },
        (validate.rules).int64.gt = 0
    ];

    string name = 3[
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "名称",
        }
    ];
}

message DeleteExampleReq {
    int64 id = 1;
}

message CheckResponse {
    bool success = 1;
}
